# DMHelper

./: .gitignore  CODEBASE_SUMMARY.md  build-linux.sh
.github/workflows/: dmh-build-linux.yml  dmh-build-mac.yml  dmh-build-windows.yml
DMHelper/: buildanddeploy_macos_cmake.sh  buildanddeploy_msvc64_cmake.bat  buildanddeploy_msvc64_cmake.ps1
DMHelper/src/: .clangd  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DMHelper.pro  aboutdialog.cpp  audioplaybackframe.cpp  audioplaybackframe.h  audioplayer.cpp  audioplayer.h  audiotrackfile.cpp  audiotrackyoutube.cpp  audiotrackyoutube.h  basicdateserver.cpp  battlecombatantframe.cpp  battlecombatantframe.h  battlecombatantwidget.cpp  battlecombatantwidget.h  battlecombatantwidget.ui  battledialogeffectsettings.cpp  battledialogeffectsettingsobjectvideo.cpp  battledialoggraphicsscene.cpp  battledialoggraphicsscene.h  battledialoggraphicsscenemousehandler.cpp  battledialoggraphicsscenemousehandler.h  battledialoglogview.cpp  battledialogmodel.cpp  battledialogmodel.h  battledialogmodelcharacter.cpp  battledialogmodelcharacter.h  battledialogmodelcombatant.cpp  battledialogmodelcombatant.h  battledialogmodelcombatantgroup.cpp  battledialogmodelcombatantgroup.h  battledialogmodelmonsterbase.cpp  battledialogmodelmonsterbase.h  battledialogmodelmonsterclass.cpp  battleframe.cpp  battleframe.h  battleframemapdrawer.cpp  (+278 more)
DMHelper/src/data/: whatsnew.txt
DMHelper/src/data/linux/: AppRun.sh  DMHelper.desktop
DMHelper/src/installer/config/: config_win32.xml  config_win64.xml  style.qss
DMHelper/src/resources/: conditions-5e.xml  conditions-brp.xml  conditions-daggerheart.xml  ruleset.xml  vocab-2e.xml  vocab-5e.xml  vocab-brp.xml  vocab-daggerheart.xml
DMHelper/src/resources/styles/: dark.qss  light.qss
DMHelper/src/vlclinux/: libvlc.so.12.0.0  libvlccore.so.9.0.0
DMHelper/test/vision/: tst_visioncalculator.cpp  vision.pro
DMHelperShared/src/: dmhnetworkdatafactory.cpp
dev/plans/: 2026-04-17-linux-port.md
dev/specs/: 2026-04-17-linux-port-design.md
docs/superpowers/specs/: 2026-04-17-linux-port-design.md
